[package]
name = "bevy_mod_rust_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["shader_format_spirv"] }
serde = "1.0.193"
# Waiting on https://github.com/EmbarkStudios/rust-gpu/pull/1134 due to bevy msrv
spirv-builder = { git = "https://github.com/LegNeato/rust-gpu", branch = "update-to-1.76.0", optional = true }
#spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "83f8c72f04a6af673b0533a0f03527b7756f883e", optional = true }

[features]
rust-gpu-builder = ["dep:spirv-builder"]
file_watcher = ["bevy/file_watcher"]
